NATTQA-ENV/force-app/main/default/objects/Dealer_Override__c/Dealer_Override__c.object-meta.xml
<CustomObject>
    <label>Dealer Override</label>
    <nameField>
        <displayFormat>DO-{000000}</displayFormat>
        <label>Dealer Override Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>