NATTQA-ENV/force-app/main/default/objects/Dealer_Override__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <filterItems>
            <field>Account.NATT_Primary_Location_Type__c</field>
            <operation>equals</operation>
            <value>Full Dealer</value>
        </filterItems>
        <filterItems>
            <field>Account.NATT_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Overrides</relationshipLabel>
    <relationshipName>Dealer_Overrides</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>