NATTQA-ENV/force-app/main/default/objects/Dealer_Override__c/fields/Override_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Override_Credit_Amount__c</fullName>
    <label>Override Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>